[package]
name = "orgparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.0"
derive_more = { version = "0.99.17", features = ["from"] }
phf = {version = "0.11.1", features = ["macros"]}
