[package]
name = "org-rust"
version = "0.1.13"
description = "CLI tool for converting Org-Mode documents to other formats"
keywords = ["org-mode", "parser"]
categories = ["command-line-utilities"]

homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
lazy_format = "2.0.0"
regex = "1.9.5"
org-exporter = { version = "0.1.4", path = "../org-exporter", package = "org-rust-exporter" }
org-parser =   { version = "0.1.3", path = "../org-parser", package = "org-rust-parser" }
serde = { version = "1.0.196", features=["derive"]}
toml = "0.8.8"
anyhow = "1.0.82"
thiserror = "1.0.58"

[build-dependencies]
clap = { version = "4.3.11", features=["derive"]}
clap_complete = "4.3.2"
clap_mangen = "0.2.14"
serde = { version = "1.0.196", features=["derive"]}
org-exporter = { version = "0.1.2", path = "../org-exporter", package = "org-rust-exporter" }
org-parser =   { version = "0.1.2", path = "../org-parser", package = "org-rust-parser" }


# [[bin]]
# name="main"
