[package]
name = "org-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
latex2mathml = "0.2.3"
memchr = "2.5.0"
org-parser = { path = "../org-parser" }
phf = {version = "0.11.1", features = ["macros"]}

[dev-dependencies]
pretty_assertions = "1.3.0"
