[package]
name = "org-rust-exporter"
version = "0.1.7"
description = "exporter for org mode documents parsed with `org-rust-parser`"

homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
latex2mathml = "0.2.3"
memchr = "2.5.0"
org-parser = { version = "0.1.3", path = "../org-parser", package = "org-rust-parser" }
phf = {version = "0.11.1", features = ["macros"]}

[dev-dependencies]
pretty_assertions = "1.3.0"
