[package]
name = "org-rust-parser"
version = "0.1.1"
description = "parser for org mode documents"

homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.0"
derive_more = { version = "0.99.17", features = ["from"] }
memchr = "2.5.0"
phf = {version = "0.11.1", features = ["macros"]}

[dev-dependencies]
pretty_assertions = "1.3.0"
